test/langtools/tools/javac/valhalla/lworld-values/IllegalByValueTest2.out
IllegalByValueTest2.java:19:55: compiler.err.value.may.not.extend
IllegalByValueTest2.java:19:26: compiler.err.duplicate.annotation.missing.container: IllegalByValueTest2.Annot
2 errors
